[FIX] fix for broken styling on mobile.
The smaller container was using position: relative therefore the height of the footer was off. This fix will make the larger container determine the height of the footer. Still need to create a minimizer button

--- a/client/src/styles/Footer/Footer.scss
+++ b/client/src/styles/Footer/Footer.scss
@@ -4,8 +4,8 @@
   padding-bottom: 5px;
   padding-top: 5px;
   position: fixed;
-  bottom: 0;
   width: 100%;
+  bottom: 0;
   left: 0;
   z-index: 3;
   background-color: white;
@@ -18,7 +18,12 @@
 }
 
 .logged-in {
-  position: relative;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: 0px;
+  left: 0px;
   width: 100%;
   height: 100%;
   transition: all 0.5s ease;
@@ -32,9 +37,7 @@
 }
 
 .logged-out {
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
+  position: relative;
   width: 100%;
   height: 100%;
   transition: all 0.5s ease;
